--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -4,7 +4,7 @@
 {% block content %}
   <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
-    <h1>Последние обновления на сайте</h1>
+    <h1>Лента подписок</h1>
     {% include 'posts/includes/switcher.html' %}
       {% for post in page_obj %}
         <article>
